--- a/backend/SmartHome/SmartHome/SmartHome.csproj
+++ b/backend/SmartHome/SmartHome/SmartHome.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
     <PackageReference Include="MySql.Data" Version="8.0.19" />
   </ItemGroup>
 
