--- a/backend/SmartHome/SmartHome/appsettings.json
+++ b/backend/SmartHome/SmartHome/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SmartHomeDBConnection": "server=localhost;database=SmartHome;user=root;password="
+  }
 }
