--- a/backend/SmartHome/SmartHome/SmartHome.csproj
+++ b/backend/SmartHome/SmartHome/SmartHome.csproj
@@ -19,6 +19,10 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
+
 
 
 </Project>
